--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -10,6 +10,12 @@
         "ecmaVersion": "latest"
     },
     "rules": {
-        "no-console": "off"
+        "no-console": "off",
+        "no-underscore-dangle": "off",
+        "no-unused-vars": "off",
+        "linebreak-style": "off",
+        "space-before-blocks": "off",
+        "camelcase": "off",
+        "comma-dangle": "off"
     }
 }
