--- a/example.env
+++ b/example.env
@@ -12,3 +12,7 @@ REFRESH_TOKEN_KEY=
 ACCESS_TOKEN_AGE=
 
 RABBITMQ_SERVER=amqp://localhost
+
+AWS_ACCESS_KEY_ID=
+AWS_SECRET_ACCESS_KEY=
+AWS_BUCKET_NAME=
