--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@hapi/jwt": "^3.2.0",
     "amqplib": "^0.10.3",
     "auto-bind": "^4.0.0",
+    "aws-sdk": "^2.1489.0",
     "bcrypt": "^5.1.1",
     "dotenv": "^16.3.1",
     "joi": "^17.10.1",
