--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "joi": "^17.10.1",
     "nanoid": "^3.3.6",
     "node-pg-migrate": "^6.2.2",
-    "pg": "^8.11.3"
+    "pg": "^8.11.3",
+    "redis": "^4.6.10"
   }
 }
