--- a/example.env
+++ b/example.env
@@ -13,8 +13,9 @@ ACCESS_TOKEN_AGE=
 
 RABBITMQ_SERVER=amqp://localhost
 
-AWS_ACCESS_KEY_ID=
-AWS_SECRET_ACCESS_KEY=
-AWS_BUCKET_NAME=
+MINIO_SERVER=
+MINIO_PORT=
+MINIO_ACCESS_KEY=
+MINIO_SECRET_KEY=
 
 REDIS_SERVER
